# terminal-aichat

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md  dist-workspace.toml
.clinerules/: design.md  requirements.md
.github/workflows/: build.yml  release.yml
src/: chat.rs  cli.rs  config.rs  main.rs  utils.rs
src/chat/: mod.rs
src/cli/: cli.rs  config.rs  interactive.rs  mod.rs  response_render.rs  structs.rs
src/config/: builder.rs  crypto.rs  display.rs  manager.rs  mod.rs  resolver.rs  structs.rs
src/crypto/: mod.rs
src/utils/: logger.rs  string.rs
wix/: main.wxs
