[package]
name = "termchat"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = "0.29.2"
clap = { version = "4.5.47", features = ["derive","cargo","env"] }
crossterm = "0.27.0"
dotenvy = "0.15.7"
futures = "0.3.31"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.143"
tokio = {version="1.47.1", features=["full"]}
aes = "0.8.3"
rand = "0.8.5"
dirs = "5.0.1"
base64 = "0.21.4"
