[package]
name = "terminal-aichat"
description = "A terminal AI/LLM chat tool. Extremely simple and easy to use. Using OpenAI-compatible `/v1/chat/completion` API"
repository = "https://github.com/slow-groovin/terminal-aichat"
license = "MIT"
version = "0.3.4"
edition = "2024"
homepage = "https://github.com/slow-groovin/terminal-aichat"

[[bin]]
name = "aichat"
path = "src/main.rs"

[dependencies]
async-openai = "0.29.2"
clap = { version = "4.5.47", features = ["derive","cargo","env"] }
crossterm = "0.29"
dotenvy = "0.15.7"
futures = "0.3.31"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.143"
tokio = {version="1.47.1", features=["full"]}
aes = "0.8.3"
rand = "0.9"
dirs = "6.0"
base64 = "0.22"
aes-gcm = "0.10.3"
sha2 = "0.10.9"
chrono = { version = "0.4", features = ["serde"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
